--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
  </head>
 
  <body>
-<img src="http://images.intellicast.com/WxImages/RadarLoop/shd_None_anim.gif"/> 
-<img src="http://images.intellicast.com/WxImages/RadarLoop/usa_None_anim.gif"/> 
+<img src="https://s.w-x.co/staticmaps/wu/wxtype/county_loc/shd/animate.png"/> 
+<img src="https://s.w-x.co/staticmaps/wu/wxtype/none/usa/animate.png"/> 
  </body>
  
  </html>
