--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
  <body>
 <img src="https://s.w-x.co/staticmaps/wu/wxtype/county_loc/shd/animate.png"/> 
 <img src="https://s.w-x.co/staticmaps/wu/wxtype/none/usa/animate.png"/> 
- </body>
+    <p style="margin-top: 20px;">
+      <a href="forecast.html">Forecast</a>
+    </p>
+	</body>
  
  </html>
