--- a/forecast.html
+++ b/forecast.html
@@ -336,7 +336,7 @@
         
         .crosshair-time {
             position: absolute;
-            top: -20px;
+            top: 0;
             background: rgba(0, 0, 0, 0.8);
             color: white;
             padding: 2px 6px;
@@ -1417,3 +1417,4 @@
 
 </body>
 </html>
+
