Max y on precip to 0.8"

--- a/forecast.html
+++ b/forecast.html
@@ -1591,7 +1591,8 @@
                                 callback: value => value.toFixed(2) + '"',
                                 font: { size: 9 }
                             },
-                            min: 0
+                            min: 0,
+                            max: .8
                         }
                     }
                 }
